feat: 新增繁體中文語系、網站頁尾組件並更新網站標題

--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -1,6 +1,6 @@
 {
     "app": {
-        "title": "Subscription Buddy"
+        "title": "Sub-Buddy"
     },
     "nav": {
         "bulletin": "公佈欄",
