fix(app): disable ReloadPrompt to fix build

--- a/apps/web-nuxt/i18n/locales/en-US.json
+++ b/apps/web-nuxt/i18n/locales/en-US.json
@@ -54,7 +54,7 @@
             "displayName": "Display Name",
             "displayNamePlaceholder": "e.g. Alice",
             "email": "Email",
-            "emailPlaceholder": "example@mail.com",
+            "emailPlaceholder": "example{'@'}mail.com",
             "password": "Password",
             "passwordPlaceholder": "At least 6 characters",
             "submitLogin": "Login",
