--- a/apps/web-nuxt/i18n/locales/zh-TW.json
+++ b/apps/web-nuxt/i18n/locales/zh-TW.json
@@ -54,7 +54,7 @@
       "displayName": "暱稱",
       "displayNamePlaceholder": "e.g. 小明",
       "email": "Email",
-      "emailPlaceholder": "example@mail.com",
+      "emailPlaceholder": "example{'@'}mail.com",
       "password": "密碼",
       "passwordPlaceholder": "至少 6 個字元",
       "submitLogin": "登入",
